--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
-body {
+/* body {
   margin: 0;
   padding: 0;
 }
 canvas {
   display: block;
+} */
+
+body {
+  margin: 0; 
+  overflow: hidden;
 }
